# needybot-speech

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  package.xml  requirements.txt  setup.py
launch/: clean_cache.launch  needybot_speech.launch  warm_cache.launch
param/: needybot_voice.yml  speech_manifest.yml
src/needybot_speech/: clean.py  server.py  warm.py
test/: needybot_speech.test
test/src/: test_needybot_speech.py
