<?xml version="1.0"?>
<package>
  <name>needybot_speech</name>
  <version>0.1.0</version>
  <description>The needybot-speech package</description>

  <maintainer email="needybot@wk.com">Needybot Team</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>needybot_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>rostest</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>needybot_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
